<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardBackgroundColor="@color/palette_white">

    <LinearLayout
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/food_image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"/>

        <TextView
            android:id="@+id/food_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:fontFamily="@font/miglia"
            android:textColor="@color/palette_black"
            android:textSize="7pt"
            android:text="@string/food_name"/>

        <TextView
            android:id="@+id/food_cost_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:padding="2dp"
            android:textColor="@color/palette_black"
            android:textSize="6pt"
            android:text="@string/food_cost"/>

        <TextView
            android:id="@+id/add_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:textSize="5pt"
            android:background="@drawable/btn_background"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textColor="@color/palette_black"
            android:fontFamily="@font/miglia"
            android:text="@string/add"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>