<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="3dp"
    app:cardBackgroundColor="@color/gray">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/order_list_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_list_name_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_name"
                android:textColor="@color/palette_black"
                android:gravity="center"
                android:padding="3dp"
                android:textSize="8pt"
                android:layout_weight="3"/>

            <TextView
                android:id="@+id/order_list_cost_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_cost"
                android:textColor="@color/palette_black"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="3dp"
                android:textSize="6pt"
                android:layout_weight="2"/>

            <TextView
                android:id="@+id/order_list_counter_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/order_counter"
                android:textColor="@color/palette_black"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="3dp"
                android:textSize="6pt"
                android:layout_weight="2"/>

            <ImageView
                android:id="@+id/order_list_reduce_counter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_remove_24"
                android:padding="3dp"
                android:layout_gravity="right"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/order_list_add_counter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_baseline_add_24"
                android:padding="3dp"
                android:layout_gravity="right"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>