<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/palette_white"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_container"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@color/palette_dark_blue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="25dp"
            android:text="@string/app_name"
            android:fontFamily="@font/miglia"
            android:textSize="11pt"
            android:textColor="@color/palette_white"/>

        <ImageView
            android:id="@+id/calculate_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_double_arrow_24"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/load_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/custom_progress_bar"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/header_container"
        app:layout_constraintBottom_toBottomOf="parent">

        <ScrollView
            android:id="@+id/body_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_container"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/body_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/food_board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food"
                    android:textColor="@color/palette_black"
                    android:fontFamily="@font/miglia"
                    android:textSize="9pt"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:background="@color/palette_light_yellow"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/food_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/palette_light_yellow"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/potable_board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/potable"
                    android:textColor="@color/palette_black"
                    android:fontFamily="@font/miglia"
                    android:textSize="9pt"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:background="@color/palette_light_yellow"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/potable_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/palette_light_yellow"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/dessert_board"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"
                    android:textColor="@color/palette_black"
                    android:fontFamily="@font/miglia"
                    android:textSize="9pt"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:padding="5dp"
                    android:background="@color/palette_light_yellow"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dessert_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/palette_light_yellow"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginBottom="5dp"/>

            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>